--- a/templates/add_exercise.html
+++ b/templates/add_exercise.html
@@ -1,40 +1,41 @@
+<!-- Add exercises page -->
 {% extends "base.html" %}
 {% block title %}Add Exercise - Fitness Exercise Development{% endblock %}
 {% block content %}
 
 <h1>Add Exercise</h1>
-
-    <form class="add-excerise__form" method="POST" action="{{ url_for('add_exercise') }}">
-        <div class="add-group">
-            <label for="group_name">Group</label>
-            <input placeholder="Muscle group" type="text" name="group_name" id="group_name" minlength="3"
-            maxlength="15" pattern="^[A-Za-z0-9 _]{3,15}$" class="validate input-group" required>
-        </div>
-        <div class="add-name">
-            <label for="exercise_name">Name</label>
-            <input placeholder="Exercise name here" type="text" name="exercise_name" id="exercise_name" minlength="3"
+<!-- Form to add exercises -->
+<form class="add-excerise__form" method="POST" action="{{ url_for('add_exercise') }}">
+    <div class="add-group">
+        <label for="group_name">Group</label>
+        <input placeholder="Muscle group" type="text" name="group_name" id="group_name" minlength="3" maxlength="15"
+            pattern="^[A-Za-z0-9 _]{3,15}$" class="validate input-group" required>
+    </div>
+    <div class="add-name">
+        <label for="exercise_name">Name</label>
+        <input placeholder="Exercise name here" type="text" name="exercise_name" id="exercise_name" minlength="3"
             maxlength="15" pattern="^[A-Za-z0-9 _]{3,15}$" class="validate" required>
-        </div>
-        <div class="add-info">
-            <input placeholder="add weight in kg" type="text" name="weight" id="weight" minlength="1" maxlength="6"
+    </div>
+    <div class="add-info">
+        <input placeholder="add weight in kg" type="text" name="weight" id="weight" minlength="1" maxlength="6"
             pattern="^[0-9]{1,2}([,.][0-9]{1,2})?$" class="validate" required>
-            <label for="weight" class="weight-label">weight:</label>
-            <input placeholder="number of repetitions" type="text" name="reps" id="reps" minlength="1" maxlength="6"
+        <label for="weight" class="weight-label">weight:</label>
+        <input placeholder="number of repetitions" type="text" name="reps" id="reps" minlength="1" maxlength="6"
             pattern="^[0-9]*$" class="validate" required>
-            <label for="reps">reps:</label>
-            <input placeholder="number of series" type="text" name="series" id="series" minlength="1" maxlength="6"
+        <label for="reps">reps:</label>
+        <input placeholder="number of series" type="text" name="series" id="series" minlength="1" maxlength="6"
             pattern="^[0-9]*$" class="validate" required>
-            <label for="series">series:</label>
-            <input placeholder="interval in seconds" type="text" name="time_interval" id="time_interval" minlength="1" maxlength="6"
-            pattern="^[0-9]*$" class="validate" required>
-            <label for="time_interval">interval:</label>
-            <textarea name="note" id="note" cols="30" rows="20" maxlength="500"></textarea>
-            <label for="note" class="note-label">note:</label>
-        </div>
-        <div class="add-buttons">
-            <a href="{{ url_for('editor') }}" class="btn btn-cancel">Cancel</a>
-            <button class="btn btn-add">Add +</button>
-        </div>
-    </form>
+        <label for="series">series:</label>
+        <input placeholder="interval in seconds" type="text" name="time_interval" id="time_interval" minlength="1"
+            maxlength="6" pattern="^[0-9]*$" class="validate" required>
+        <label for="time_interval">interval:</label>
+        <textarea name="note" id="note" cols="30" rows="20" maxlength="500"></textarea>
+        <label for="note" class="note-label">note:</label>
+    </div>
+    <div class="add-buttons">
+        <a href="{{ url_for('editor') }}" class="btn btn-cancel">Cancel</a>
+        <button class="btn btn-add">Add +</button>
+    </div>
+</form>
 
 {% endblock %}
