--- a/templates/search.html
+++ b/templates/search.html
@@ -1,79 +1,84 @@
+<!-- Search page -->
 {% extends "base.html" %}
 {% block title %}Search - Fitness Exercise Development{% endblock %}
 {% block content %}
 
 {% if exercises_list|length > 0 %}
+    <h1>Search</h1>
 
-<h1>Search</h1>
+    <!-- Search form -->
+    <form class="search-form" method="POST" action="{{ url_for('search') }}">
+        <div class="search-bg">
+            <input type="text" name="query" id="query" minlength="3" required>
+            <button type="submit" class="search-submit"><i class="fas fa-search"></i></button>
+        </div>
+    </form>
 
-<form class="search-form" method="POST" action="{{ url_for('search') }}">
-    <div class="search-bg">
-        <input type="text" name="query" id="query" minlength="3" required>
-        <button type="submit" class="search-submit"><i class="fas fa-search"></i></button>
+    <h2>Search results for: {{ query }}</h2>
+    <!-- Search result card list -->
+    <div class="exercise-list">
+        {% for group in groups_list %}
+        <div class="group-list">
+            <h5 class="group-name">{{group}}</h5>
+            <ul class="collapsible">
+                {% for exercise in exercises_list %}
+                {% if exercise.group_name ==  group %}
+                <li>
+                    <div class="collapsible-header z-depth-1">{{ exercise.exercise_name }}
+                        <div>
+                            <a href="{{ url_for('copy_exercise', exercise_id=exercise._id) }}" class="btn btn-editor ">
+                                <i class="fas fa-plus"></i>
+                            </a>
+                            <i class="fas fa-chevron-circle-down"></i>
+                        </div>
+                    </div>
+                    <div class="collapsible-body">
+                        <div class="exercise-info">
+                            <div class="info-name">Weight: </div><span>{{ exercise.weight }}</span><span>kg</span>
+                        </div>
+                        <div class="exercise-info">
+                            <div class="info-name">Reps: </div>{{ exercise.reps }}</span>
+                        </div>
+                        <div class="exercise-info">
+                            <div class="info-name">Series: </div><span>{{ exercise.series }}</span>
+                        </div>
+                        <div class="exercise-info">
+                            <div class="info-name">Interval: </div><span>{{ exercise.time_interval }}</span><span>s</span>
+                        </div>
+                        {% if exercise.note %}
+                        <div class="exercise-info">
+                            <div class="info-name">Note: </div>{{ exercise.note }}</span>
+                        </div>
+                        {% endif %}
+                    </div>
+                </li>
+                {% endif %}
+                {% endfor %}
+            </ul>
+        </div>
+        {% endfor %}
     </div>
-</form>
 
-<h2>Search results for: {{ query }}</h2>
-
-<div class="exercise-list">
-    {% for group in groups_list %}
-    <div class="group-list">
-        <h5 class="group-name">{{group}}</h5>
-        <ul class="collapsible">
-            {% for exercise in exercises_list %}
-            {% if exercise.group_name ==  group %}
-            <li>
-                <div class="collapsible-header z-depth-1">{{ exercise.exercise_name }}
-                    <div>
-                        <a href="{{ url_for('copy_exercise', exercise_id=exercise._id) }}" class="btn btn-editor ">
-                            <i class="fas fa-plus"></i>
-                        </a>
-                        <i class="fas fa-chevron-circle-down"></i>
-                    </div>
-                </div>
-                <div class="collapsible-body">
-                    <div class="exercise-info">
-                        <div class="info-name">Weight: </div><span>{{ exercise.weight }}</span><span>kg</span>
-                    </div>
-                    <div class="exercise-info">
-                        <div class="info-name">Reps: </div>{{ exercise.reps }}</span>
-                    </div>
-                    <div class="exercise-info">
-                        <div class="info-name">Series: </div><span>{{ exercise.series }}</span>
-                    </div>
-                    <div class="exercise-info">
-                        <div class="info-name">Interval: </div><span>{{ exercise.time_interval }}</span><span>s</span>
-                    </div>
-                    {% if exercise.note %}
-                    <div class="exercise-info">
-                        <div class="info-name">Note: </div>{{ exercise.note }}</span>
-                    </div>
-                    {% endif %}
-                </div>
-            </li>
-            {% endif %}
-            {% endfor %}
-        </ul>
-    </div>
-    {% endfor %}
-</div>
 {% else %}
+    <h1>Search</h1>
 
-<h1>Search</h1>
+    {% if no_results %}
+    <!-- Error message when there is not result for query searched -->
+    <h2>No search results for: {{ query }}</h2>
+    {% else %}
+    <!-- Explanation about search page -->
+    <div class="search-intro">No ideas to create to create your own exercises? Search for a muscle group or exercecise name
+        to find some exercises
+        cards and click on <span class="btn btn-editor" id="search-btn"><i class="fas fa-plus"></i></span>to add a exercise
+        to your own program</div>
+    {% endif %}
 
-{% if no_results %}
-<h2>No search results for: {{ query }}</h2>
-{% else %}
-<div class="search-intro">No ideas to create to create your own exercises? Search for a muscle group or exercecise name to find some exercises
-    cards and click on <span class="btn btn-editor" id="search-btn"><i class="fas fa-plus"></i></span>to add a exercise to your own program</div>
+    <!-- Search form -->
+    <form class="search-form" method="POST" action="{{ url_for('search') }}">
+        <div class="search-bg">
+            <input type="text" name="query" id="query" minlength="3" required>
+            <button type="submit" class="search-submit"><i class="fas fa-search"></i></button>
+        </div>
+    </form>
 {% endif %}
-
-<form class="search-form" method="POST" action="{{ url_for('search') }}">
-    <div class="search-bg">
-        <input type="text" name="query" id="query" minlength="3" required>
-        <button type="submit" class="search-submit"><i class="fas fa-search"></i></button>
-    </div>
-</form>
-{% endif %}
-
 {% endblock %}
