--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
             <h5>Create your account</h5>
             <button class="btn btn-create">Register</button>
         </div>
-        <div class="right-area">
-            <h5>Have an account?</h5>
+        <div class="right-area mobile-hidden">
+            <h5>Already have an account?</h5>
             <button class="btn btn-account">Sign in</button>
         </div>
         <!-- Login form -->
