Final review and bug fixes

--- a/templates/search.html
+++ b/templates/search.html
@@ -37,7 +37,7 @@
                             <div class="info-name">Weight: </div><span>{{ exercise.weight }}</span><span>kg</span>
                         </div>
                         <div class="exercise-info">
-                            <div class="info-name">Reps: </div>{{ exercise.reps }}</span>
+                            <div class="info-name">Reps: </div><span>{{ exercise.reps }}</span>
                         </div>
                         <div class="exercise-info">
                             <div class="info-name">Series: </div><span>{{ exercise.series }}</span>
@@ -47,7 +47,7 @@
                         </div>
                         {% if exercise.note %}
                         <div class="exercise-info">
-                            <div class="info-name">Note: </div>{{ exercise.note }}</span>
+                            <div class="info-name">Note: </div><span>{{ exercise.note }}</span>
                         </div>
                         {% endif %}
                     </div>
